<resources>
    <string name="app_name">BasicCalculatorExample</string>

    <string name="title_activity_pro_calculator">ProCalculator</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="percent_sign">%</string>
    <string name="plus_sign">+</string>
    <string name="neg_sign">+/-</string>
    <string name="dot_sign">.</string>
    <string name="minus_sign">-</string>
    <string name="div_sign">/</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="equal_sign">=</string>
    <string name="ac_sign">AC</string>
    <string name="mul_sign">x</string>
</resources>
